fixed mobile horizontal scroll

--- a/src/styles/about-creators.scss
+++ b/src/styles/about-creators.scss
@@ -99,12 +99,12 @@
   }
 }
 
-@media screen and (max-width: $small-screen-breakpoint) {
+@media screen and (max-width: $super-small-screen-breakpoint) {
   .about-creators {
     &__text {
       margin: 0 20px;
-      min-width: 380px;
       width: auto;
+      min-width: auto;
     }
 
     &__heading {
