--- a/src/styles/burger-menu.scss
+++ b/src/styles/burger-menu.scss
@@ -96,10 +96,6 @@
       height: 15px;
     }
 
-    &__icon-stripe {
-      height: 1px;
-    }
-
     &__toggle {
       &:checked ~ .burger-menu__button {
         top: 20px;
