--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -124,6 +124,7 @@
 
 @media screen and (max-width: $super-small-screen-breakpoint) {
   .footer {
+    padding: 0 20px;
     height: 470px;
     justify-content: start;
     flex-direction: column;
