--- a/src/styles/heading.scss
+++ b/src/styles/heading.scss
@@ -71,6 +71,9 @@
 
 @media screen and (max-width: $super-small-screen-breakpoint) {
   .heading {
+    &__main-heading {
+      width: auto;
+    }
     &__info {
       padding: 25px 20px 0;
       margin-top: 0;
