--- a/src/styles/ingredients.scss
+++ b/src/styles/ingredients.scss
@@ -96,6 +96,11 @@
 
     &__text {
       width: 100%;
+      margin: 0 20px;
+    }
+
+    &__heading {
+      min-width: auto;
     }
 
     &__bottle {
