--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -92,7 +92,7 @@
     &__about-creators,
     &__ingredients,
     &__footer {
-      padding: 0 20px;
+      padding: 0;
     }
 
     &__contact-us {
