--- a/src/styles/shop.scss
+++ b/src/styles/shop.scss
@@ -157,6 +157,10 @@
       margin-top: 12px;
     }
 
+    &__list-item {
+      margin-right: 0;
+    }
+
     &__sliders {
       margin-right: 20px;
     }
