--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -30,4 +30,9 @@
   %h2, %h1 {
     text-align: center;
   }
+
+  %h1 {
+    font-size: 24px;
+    line-height: 24px;
+  }
 }
